# shlackbot

./: LICENSE  README.md  run.sh  shlackbot.cabal  slaskellbot.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs  Parser.hs  Types.hs  Util.hs
src/Plugin/: Dice.hs  Jira.hs
test/: Spec.hs
