name:                slaskellbot
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/slaskellbot/slaskellbot#readme
license:             BSD3
license-file:        LICENSE
author:              Wagner Amaral
maintainer:          wamaral@wamaral.org
copyright:           2017 Wagner Amaral
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
                     , Parser
                     , Plugin.Jira
                     , Plugin.Dice
                     , Types
                     , Util
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , connection
                     , containers
                     , datetime
                     , dice
                     , http-client
                     , http-types
                     , lens
                     , lens-aeson
                     , megaparsec
                     , mtl
                     , network
                     , slack-api
                     , stm
                     , template-haskell
                     , text
                     , wreq
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , FlexibleContexts
                     , FlexibleInstances

executable slaskellbot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , slaskellbot
                     , slack-api
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite slaskellbot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , slaskellbot
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/wamaral/slaskellbot
